--- a/package.json
+++ b/package.json
@@ -106,10 +106,10 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "govuk_frontend_toolkit": "^9.0.1",
-    "govuk-frontend": "^4.4.0",
+    "govuk-frontend": "^4.4.1",
     "helmet": "^6.0.1",
     "http-errors": "^2.0.0",
-    "jquery": "^3.6.1",
+    "jquery": "^3.6.3",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "nocache": "^3.0.4",
@@ -132,9 +132,9 @@
     "@types/csurf": "^1.11.2",
     "@types/express-session": "^1.17.5",
     "@types/http-errors": "^2.0.1",
-    "@types/jest": "^29.2.4",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^18.11.11",
+    "@types/jest": "^29.2.5",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/node": "^18.11.18",
     "@types/nunjucks": "^3.2.1",
     "@types/passport": "^1.0.11",
     "@types/passport-oauth2": "^1.4.11",
@@ -143,33 +143,33 @@
     "@types/uuid": "^9.0.0",
     "@types/validator": "^13.7.10",
     "@types/validatorjs": "^3.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.46.0",
-    "audit-ci": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "audit-ci": "^6.4.1",
     "concurrently": "^7.6.0",
     "cookie-session": "^2.0.0",
-    "cypress": "^12.0.1",
-    "cypress-multi-reporters": "^1.6.1",
+    "cypress": "^12.2.0",
+    "cypress-multi-reporters": "^1.6.2",
     "dotenv": "^16.0.3",
-    "eslint": "^8.29.0",
+    "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.2",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
     "jest-html-reporter": "^3.7.0",
     "jest-junit": "^15.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.1.0",
     "mocha-junit-reporter": "^2.2.0",
     "nock": "^13.2.9",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
-    "sass": "^1.56.1",
+    "sass": "^1.57.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
