--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "npm": "^11"
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "^7.1.1",
+    "@ministryofjustice/frontend": "7.1.1",
     "@ministryofjustice/hmpps-auth-clients": "^1.0.1",
     "@ministryofjustice/hmpps-monitoring": "^1.0.0",
     "@ministryofjustice/hmpps-rest-client": "^1.0.0",
@@ -57,12 +57,12 @@
     "passport-oauth2": "^1.8.0",
     "redis": "^5.10.0",
     "superagent": "^10.2.3",
-    "validator": "^13.15.23",
+    "validator": "^13.15.26",
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@jgoz/esbuild-plugin-typecheck": "^4.0.4",
-    "@ministryofjustice/eslint-config-hmpps": "^1.0.1",
+    "@ministryofjustice/eslint-config-hmpps": "^1.0.2",
     "@ministryofjustice/hmpps-npm-script-allowlist": "0.0.3",
     "@ministryofjustice/hmpps-precommit-hooks": "^1.0.2",
     "@tsconfig/node24": "^24.0.3",
@@ -74,7 +74,7 @@
     "@types/http-errors": "^2.0.5",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.10.1",
+    "@types/node": "24.10.4",
     "@types/nunjucks": "^3.2.6",
     "@types/passport": "^1.0.17",
     "@types/passport-oauth2": "^1.8.0",
@@ -83,9 +83,9 @@
     "@types/validator": "^13.15.10",
     "@types/validatorjs": "^3.15.5",
     "audit-ci": "^7.1.0",
-    "cypress": "^15.7.1",
+    "cypress": "^15.8.1",
     "cypress-multi-reporters": "^2.0.5",
-    "esbuild": "^0.27.1",
+    "esbuild": "^0.27.2",
     "esbuild-plugin-clean": "^1.0.1",
     "esbuild-plugin-copy": "^2.1.1",
     "esbuild-plugin-manifest": "^1.0.5",
