--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "csrf-sync": "^4.2.1",
     "express": "5.2.1",
     "express-session": "^1.18.2",
-    "govuk-frontend": "^5.13.0",
+    "govuk-frontend": "^5.14.0",
     "helmet": "^8.1.0",
     "http-errors": "^2.0.1",
-    "jquery": "^3.7.1",
+    "jquery": "3.7.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "nocache": "^4.0.0",
@@ -67,7 +67,7 @@
     "@ministryofjustice/hmpps-npm-script-allowlist": "0.0.3",
     "@ministryofjustice/hmpps-precommit-hooks": "^1.0.2",
     "@playwright/test": "1.57.0",
-    "@tsconfig/node24": "^24.0.3",
+    "@tsconfig/node24": "^24.0.4",
     "@types/bunyan": "^1.8.11",
     "@types/bunyan-format": "^0.2.9",
     "@types/compression": "^1.8.1",
@@ -89,7 +89,7 @@
     "esbuild": "0.27.2",
     "esbuild-plugin-copy": "^2.1.1",
     "esbuild-plugin-manifest": "^1.0.5",
-    "esbuild-sass-plugin": "^3.3.1",
+    "esbuild-sass-plugin": "^3.6.0",
     "jest": "^30.2.0",
     "jest-html-reporter": "^4.3.0",
     "jest-junit": "^16.0.0",
